--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript-eslint": "8.15.0"
   },
   "dependencies": {
+    "@fastify/cors": "10.0.1",
     "@fastify/express": "^4.0.1",
     "@fastify/jwt": "^9.0.1",
     "@fastify/rate-limit": "^10.2.1",
