--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node": "^22.9.1",
     "eslint": "9.15.0",
     "husky": "^9.1.7",
-    "prisma": "^5.22.0",
+    "prisma": "6.2.1",
     "tsx": "^4.19.2",
     "typescript": "5.6.3",
     "typescript-eslint": "8.15.0"
@@ -36,7 +36,7 @@
     "@fastify/express": "^4.0.1",
     "@fastify/jwt": "^9.0.1",
     "@fastify/rate-limit": "^10.2.1",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "6.2.1",
     "bcrypt": "^5.1.1",
     "cron": "^3.2.1",
     "fastify": "^5.1.0",
